Commit entrega segundo parcial

--- a/index.html
+++ b/index.html
@@ -258,6 +258,15 @@
           <div class="col-md-4 col-sm-6 portfolio-item">
               <img class="img-fluid" src="img/portfolio/mock3.jpg" alt="">
           </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
+          </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
+            <br></br>
+            <br></br>
+              <a class="btn btn-xl"  href="/Users/enriquebovio/Desktop/ebovio.github.io/pdfs/SaMX.pdf" download="SaMX.pdf"><center>Descargar Plan de Negocios</center></a>
+          </div>
+          <div class="col-md-4 col-sm-6 portfolio-item">
+          </div>
           </div>
         </div>
       </div>
