--- a/LogIn/Prototype/index.html
+++ b/LogIn/Prototype/index.html
@@ -251,7 +251,7 @@
                           <p class="help-block text-danger"></p>
                         </div>
                         <div class="clearfix"></div>
-                          <a class="btn btn-xl" href="/Users/enriquebovio/Desktop/ebovio.github.io/LogIn/Prototype/pdfs/ticket.pdf" download="ticket.pdf">Buy Ticket</a>
+                          <a class="btn btn-xl" href="/pdfs/ticket.pdf" download="ticket.pdf">Buy Ticket</a>
                         </div>
                       </div>
                   </form>
@@ -275,31 +275,6 @@
           </div>
           <div align="center">
             <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d120405.51977016454!2d-99.13367974268111!3d19.42655161155165!3m2!1i1024!2i768!4f13.1!5e0!3m2!1ses-419!2smx!4v1511314045850" width="800" height="600" frameborder="0" style="border:0" allowfullscreen></iframe>
-                   <!-- <style>
-                     #map {
-                       height: 600px;
-                       width: 100%;
-                      }
-                   </style>
-                 <body>
-                   <div id="map"></div>
-                   <script>
-                     function initMap() {
-                       var uluru = {lat: 19.428, lng: -99.127};
-                       var map = new google.maps.Map(document.getElementById('map'), {
-                         zoom: 12,
-                         center: uluru
-                       });
-                       var marker = new google.maps.Marker({
-                         position: uluru,
-                         map: map
-                       });
-                     }
-                   </script>
-                   <script async defer
-                   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBRrhyp-sbA1swSs0e4YsZU7ADDnaOmuzw&callback=initMap">
-                   </script>
-                 </body> -->
             </div>
         </div>
       </div>
