--- a/LogIn/index.html
+++ b/LogIn/index.html
@@ -53,7 +53,7 @@
                     <p class="help-block text-danger"></p>
                   </div>
                   <div class="clearfix"></div>
-                    <a class="btn btn-xl" href="/Users/enriquebovio/Desktop/ebovio.github.io/LogIn/Prototype/index.html" >Log In</a>
+                    <a class="btn btn-xl" href="/Prototype/index.html" >Log In</a>
                   </div>
                 </div>
             </form>
