--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
           <div class="col-md-4 col-sm-6 portfolio-item">
             <br></br>
             <br></br>
-              <a class="btn btn-xl"  href="/Users/enriquebovio/Desktop/ebovio.github.io/pdfs/SaMX.pdf" download="SaMX.pdf"><center>Descargar Plan de Negocios</center></a>
+              <a class="btn btn-xl"  href="/Users/enriquebovio/Desktop/ebovio.github.io/pdfs/SaMX.pdf" download="SaMX.pdf"><center>Download business plan</center></a>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
           </div>
@@ -405,7 +405,7 @@
     <!-- Portfolio Modals -->
 
     <!-- Modal 1 -->
-    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" aria-hidden="true">
+    <div class="portfolio-modal modal fade" id="portfolioModal1" tabindex="-1" role="dialog" width="550" height="750">
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="close-modal" data-dismiss="modal">
