--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
           <div class="col-md-4 col-sm-6 portfolio-item">
             <br></br>
             <br></br>
-              <a class="btn btn-xl"  href="/Users/enriquebovio/Desktop/ebovio.github.io/pdfs/SaMX.pdf" download="SaMX.pdf"><center>Download business plan</center></a>
+              <a class="btn btn-xl"  href="ebovio.github.io/pdfs/SaMX.pdf" download="SaMX.pdf"><center>Download business plan</center></a>
           </div>
           <div class="col-md-4 col-sm-6 portfolio-item">
           </div>
