--- a/LogIn/SaMX.html
+++ b/LogIn/SaMX.html
@@ -286,10 +286,10 @@
           </div>
           <div class="col-sm-4">
             <div class="team-member">
-              <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">
+            <!-- Team  <img class="mx-auto rounded-circle" src="img/team/2.jpg" alt="">-->
               <h4>Enrique Anaya Bovio</h4>
               <p class="text-muted">Developer</p>
-              <ul class="list-inline social-buttons">
+            <!--   <ul class="list-inline social-buttons">
                 <li class="list-inline-item">
                   <a href="#">
                     <i class="fa fa-twitter"></i>
@@ -305,7 +305,29 @@
                     <i class="fa fa-linkedin"></i>
                   </a>
                 </li>
-              </ul>
+              </ul>-->
+            </div>
+            <div class="team-member">
+        <!-- Team     <img class="mx-auto rounded-circle" src="img/team/1.jpg" alt=""> -->
+              <h4>Jorge Andrés Pietra Santa Ochoa</h4>
+              <p class="text-muted">Developer</p>
+              <!--  <ul class="list-inline social-buttons">
+                <li class="list-inline-item">
+                  <a href="#">
+                    <i class="fa fa-twitter"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="#">
+                    <i class="fa fa-facebook"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item">
+                  <a href="#">
+                    <i class="fa fa-linkedin"></i>
+                  </a>
+                </li>
+              </ul>-->
             </div>
           </div>
           <div class="col-sm-4">
@@ -367,7 +389,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-4">
-            <span class="copyright">Copyright &copy; Your Website 2017</span>
+            <span class="copyright">Copyright &copy; Your Website 2019</span>
           </div>
           <div class="col-md-4">
             <ul class="list-inline social-buttons">
